--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.2.10
 Django==3.1.1
 django-crispy-forms==1.9.2
 django-markdownx==3.0.1
+gunicorn==20.0.4
 Markdown==3.2.2
 Pillow==7.2.0
 psycopg2==2.8.6
 pytz==2020.1
 sqlparse==0.3.1
+whitenoise==5.2.0
