--- a/SPE-website/.vscode/settings.json
+++ b/SPE-website/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Shadan Arif\\anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\Shadan Arif\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
